# autonomous-dev-system

./: .env.example  .gitignore  PRODUCT-REVIEW.md  PRODUCT.md  README.md  TODO.md  VIBE-REVIEW.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md  settings.json
.github/: dependabot.yml
.github/workflows/: autofix.yml  ci.yml  dependabot-automerge.yml
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/v1.1/: E2E-EVALUATION.md
benchmarks/: README.md
benchmarks/architecture-quality/: tasks.json
benchmarks/code-quality/: tasks.json
plans/: 2026-04-10-agent-teams-native-execution-plan.md  2026-04-10-telegram-oi-e2e-findings.md  2026-04-10-telegram-oi-frontend-interface-spec.md
src/: index.ts  orchestrator.ts
tasks-plans/: product-execution-flow.md
test-run-email-bot/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
test-run-email-bot/backend/app/: config.py  main.py
test-run-email-bot/backend/app/models/: schemas.py
test-run-email-bot/backend/app/prompts/: categorize.txt  chat_system.txt  draft_casual.txt  draft_concise.txt  draft_professional.txt
test-run-email-bot/backend/app/services/: encryption_service.py  imap_service.py  mime_parser.py  ollama_service.py  prompt_loader.py  smtp_service.py
test-run-email-bot/backend/tests/: test_encryption.py  test_imap_service.py  test_mime_parser.py  test_ollama_service.py
(+250 files in other folders)
