[project]
name = "email-bot-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.*",
    "uvicorn[standard]==0.44.*",
    "aiosqlite==0.22.*",
    "pydantic==2.12.*",
    "pydantic-settings",
    "email-validator>=2.0",
    "cryptography==46.*",
    "aioimaplib==2.0.*",
    "aiosmtplib==5.1.*",
    "httpx==0.28.*",
    "structlog==25.5.*",
    "jinja2",
    "python-multipart",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]
